# Weather-Dress

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  db_cluster-22-12-2025@07-31-14.backup  docker-compose.yml  outfit_items.csv  package.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/routers/: feedback.py  geo.py  health.py  outfit.py  weather.py
backend/app/schemas/: weather.py
backend/app/script/: backfill_embeddings.py
backend/app/services/: open_weather.py  outfit_langchain.py
backend/weather_outfit_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
supabase/migrations/: 0001_outfit_items_and_match.sql  0002_replace_match_outfits_rpc.sql
weather-dress/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
weather-dress/src/: api.ts
weather-dress/src/app/: globals.css  layout.tsx  page.tsx
weather-dress/src/app/components/common/: PlaceholderCard.tsx  SectionHeader.tsx
weather-dress/src/app/components/location/: LocationPicker.tsx
weather-dress/src/app/components/ui/: Tabs.tsx
weather-dress/src/app/components/weather/: page.tsx
weather-dress/src/app/lib/: geolocation.ts  hooks.ts  supabaseClient.ts
weather-dress/src/app/weather/: WeatherClient.tsx  page.tsx
weather-dress/src/app/weather/components/: OutfitRecommendationCard.tsx  OutfitRecommendationGrid.tsx
weather-dress/src/types/: custom.d.ts
(+19 files in other folders)
